// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Form/Controls/ColorPicker should invoke onChange with a controlled component 1`] = `
".a {
  display: inline-block;
}
.b {
  margin-bottom: 0.5rem;
}
.c {
  cursor: pointer;
}
.d {
  display: block;
}
.e {
  font-size: 1rem;
}
.f {
  font-weight: 400;
}
.g {
  line-height: 1.5;
}
.h {
  color: #212529;
}
.i {
  appearance: none;
}
.j {
  background-color: #fff;
}
.k {
  background-clip: padding-box;
}
.l {
  width: 3rem;
}
.m {
  height: calc(1.5em + 0.75rem + 2px);
}
.z::color-swatch {
  border-top-left-radius: 0.375rem;
}
.ab::color-swatch {
  border-top-right-radius: 0.375rem;
}
.ac::color-swatch {
  border-bottom-right-radius: 0.375rem;
}
.ae::color-swatch {
  border-bottom-left-radius: 0.375rem;
}
.af::color-swatch {
  border-top-width: 0;
}
.ag::color-swatch {
  border-right-width: 0;
}
.ah::color-swatch {
  border-bottom-width: 0;
}
.ai::color-swatch {
  border-left-width: 0;
}
.aj::color-swatch {
  border-top-color: !important;
}
.ak::color-swatch {
  border-right-color: !important;
}
.al::color-swatch {
  border-bottom-color: !important;
}
.am::color-swatch {
  border-left-color: !important;
}
.an:disabled {
  cursor: default;
}
.ao:readonly {
  cursor: default;
}
.ap {
  padding-top: 0.375rem;
}
.aq {
  padding-right: 0.375rem;
}
.ar {
  padding-bottom: 0.375rem;
}
.as {
  padding-left: 0.375rem;
}
.at {
  transition-property: border-color, box-shadow;
}
.au {
  transition-duration: 0.15s, 0.15s;
}
.av {
  transition-delay: ease-in-out, ease-in-out;
}
.aw {
  transition-timing-function: ease, ease;
}
.ax {
  border-top-left-radius: 0.375rem;
}
.ay {
  border-top-right-radius: 0.375rem;
}
.az {
  border-bottom-right-radius: 0.375rem;
}
.ba {
  border-bottom-left-radius: 0.375rem;
}
.bb {
  border-top-width: 1px;
}
.bc {
  border-right-width: 1px;
}
.bd {
  border-bottom-width: 1px;
}
.be {
  border-left-width: 1px;
}
.bf {
  border-top-style: solid;
}
.bg {
  border-right-style: solid;
}
.bh {
  border-bottom-style: solid;
}
.bi {
  border-left-style: solid;
}
.bj {
  border-top-color: #dee2e6;
}
.bk {
  border-right-color: #dee2e6;
}
.bl {
  border-bottom-color: #dee2e6;
}
.bm {
  border-left-color: #dee2e6;
}
.r:focus {
  color: #212529;
}
.s:focus {
  background-color: #fff;
}
.t:focus {
  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
}
.u:focus {
  outline-width: 0;
}
.v:focus {
  border-top-color: #86b7fe;
}
.w:focus {
  border-right-color: #86b7fe;
}
.x:focus {
  border-bottom-color: #86b7fe;
}
.y:focus {
  border-left-color: #86b7fe;
}
@media (prefers-reduced-motion: reduce) {
  .n {
    transition-property: none;
  }
  .o {
    transition-duration: 0s;
  }
  .p {
    transition-delay: 0s;
  }
  .q {
    transition-timing-function: ease;
  }
}


<label data-testid="form-label" for="color-picker" class="a b form-label"
  >Pick Color</label
><input
  data-testid="color-picker"
  id="color-picker"
  type="color"
  class="ab ac ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az ba bb bc bd be bf bg bh bi bj bk bl bm c d e f g h i j k l m n o p q r s t u v w x y z form-control-color"
  title="Pick Color"
  value="#000"
/>;
"
`;

exports[`components/Form/Controls/ColorPicker should render a color picker 1`] = `
".a {
  cursor: pointer;
}
.b {
  display: block;
}
.c {
  font-size: 1rem;
}
.d {
  font-weight: 400;
}
.e {
  line-height: 1.5;
}
.f {
  color: #212529;
}
.g {
  appearance: none;
}
.h {
  background-color: #fff;
}
.i {
  background-clip: padding-box;
}
.j {
  width: 3rem;
}
.k {
  height: calc(1.5em + 0.75rem + 2px);
}
.x::color-swatch {
  border-top-left-radius: 0.375rem;
}
.y::color-swatch {
  border-top-right-radius: 0.375rem;
}
.z::color-swatch {
  border-bottom-right-radius: 0.375rem;
}
.ab::color-swatch {
  border-bottom-left-radius: 0.375rem;
}
.ac::color-swatch {
  border-top-width: 0;
}
.ae::color-swatch {
  border-right-width: 0;
}
.af::color-swatch {
  border-bottom-width: 0;
}
.ag::color-swatch {
  border-left-width: 0;
}
.ah::color-swatch {
  border-top-color: !important;
}
.ai::color-swatch {
  border-right-color: !important;
}
.aj::color-swatch {
  border-bottom-color: !important;
}
.ak::color-swatch {
  border-left-color: !important;
}
.al:disabled {
  cursor: default;
}
.am:readonly {
  cursor: default;
}
.an {
  padding-top: 0.375rem;
}
.ao {
  padding-right: 0.375rem;
}
.ap {
  padding-bottom: 0.375rem;
}
.aq {
  padding-left: 0.375rem;
}
.ar {
  transition-property: border-color, box-shadow;
}
.as {
  transition-duration: 0.15s, 0.15s;
}
.at {
  transition-delay: ease-in-out, ease-in-out;
}
.au {
  transition-timing-function: ease, ease;
}
.av {
  border-top-left-radius: 0.375rem;
}
.aw {
  border-top-right-radius: 0.375rem;
}
.ax {
  border-bottom-right-radius: 0.375rem;
}
.ay {
  border-bottom-left-radius: 0.375rem;
}
.az {
  border-top-width: 1px;
}
.ba {
  border-right-width: 1px;
}
.bb {
  border-bottom-width: 1px;
}
.bc {
  border-left-width: 1px;
}
.bd {
  border-top-style: solid;
}
.be {
  border-right-style: solid;
}
.bf {
  border-bottom-style: solid;
}
.bg {
  border-left-style: solid;
}
.bh {
  border-top-color: #dee2e6;
}
.bi {
  border-right-color: #dee2e6;
}
.bj {
  border-bottom-color: #dee2e6;
}
.bk {
  border-left-color: #dee2e6;
}
.p:focus {
  color: #212529;
}
.q:focus {
  background-color: #fff;
}
.r:focus {
  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
}
.s:focus {
  outline-width: 0;
}
.t:focus {
  border-top-color: #86b7fe;
}
.u:focus {
  border-right-color: #86b7fe;
}
.v:focus {
  border-bottom-color: #86b7fe;
}
.w:focus {
  border-left-color: #86b7fe;
}
@media (prefers-reduced-motion: reduce) {
  .l {
    transition-property: none;
  }
  .m {
    transition-duration: 0s;
  }
  .n {
    transition-delay: 0s;
  }
  .o {
    transition-timing-function: ease;
  }
}


<input
  data-testid="color-picker"
  id="color-picker"
  type="color"
  class="a ab ac ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b ba bb bc bd be bf bg bh bi bj bk c d e f g h i j k l m n o p q r s t u v w x y z form-control-color"
  value="#000"
/>;
"
`;

exports[`components/Form/Controls/ColorPicker should render a color picker with title 1`] = `
".a {
  cursor: pointer;
}
.b {
  display: block;
}
.c {
  font-size: 1rem;
}
.d {
  font-weight: 400;
}
.e {
  line-height: 1.5;
}
.f {
  color: #212529;
}
.g {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
}
.h {
  -webkit-background-color: #fff;
  background-color: #fff;
}
.i {
  background-clip: padding-box;
}
.j {
  width: 3rem;
}
.k {
  height: calc(1.5em + 0.5rem + 2px);
}
.x::color-swatch {
  border-top-left-radius: 0.375rem;
}
.y::color-swatch {
  border-top-right-radius: 0.375rem;
}
.z::color-swatch {
  border-bottom-right-radius: 0.375rem;
}
.ab::color-swatch {
  border-bottom-left-radius: 0.375rem;
}
.ac::color-swatch {
  border-top-width: 0;
}
.ae::color-swatch {
  border-right-width: 0;
}
.af::color-swatch {
  border-bottom-width: 0;
}
.ag::color-swatch {
  border-left-width: 0;
}
.ah::color-swatch {
  border-top-color: !important;
}
.ai::color-swatch {
  border-right-color: !important;
}
.aj::color-swatch {
  border-bottom-color: !important;
}
.ak::color-swatch {
  border-left-color: !important;
}
.al:disabled {
  cursor: default;
}
.am:readonly {
  cursor: default;
}
.an {
  padding-top: 0.375rem;
}
.ao {
  padding-right: 0.375rem;
}
.ap {
  padding-bottom: 0.375rem;
}
.aq {
  padding-left: 0.375rem;
}
.ar {
  transition-property: border-color, box-shadow;
}
.as {
  transition-duration: 0.15s, 0.15s;
}
.at {
  transition-delay: ease-in-out, ease-in-out;
}
.au {
  transition-timing-function: ease, ease;
}
.av {
  border-top-left-radius: 0.375rem;
}
.aw {
  border-top-right-radius: 0.375rem;
}
.ax {
  border-bottom-right-radius: 0.375rem;
}
.ay {
  border-bottom-left-radius: 0.375rem;
}
.az {
  border-top-width: 1px;
}
.ba {
  border-right-width: 1px;
}
.bb {
  border-bottom-width: 1px;
}
.bc {
  border-left-width: 1px;
}
.bd {
  border-top-style: solid;
}
.be {
  border-right-style: solid;
}
.bf {
  border-bottom-style: solid;
}
.bg {
  border-left-style: solid;
}
.bh {
  border-top-color: #dee2e6;
}
.bi {
  border-right-color: #dee2e6;
}
.bj {
  border-bottom-color: #dee2e6;
}
.bk {
  border-left-color: #dee2e6;
}
.p:focus {
  color: #212529;
}
.q:focus {
  -webkit-background-color: #fff;
  background-color: #fff;
}
.r:focus {
  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
}
.s:focus {
  outline-width: 0;
}
.t:focus {
  border-top-color: #86b7fe;
}
.u:focus {
  border-right-color: #86b7fe;
}
.v:focus {
  border-bottom-color: #86b7fe;
}
.w:focus {
  border-left-color: #86b7fe;
}
@media (prefers-reduced-motion: reduce) {
  .l {
    transition-property: none;
  }
  .m {
    transition-duration: 0s;
  }
  .n {
    transition-delay: 0s;
  }
  .o {
    transition-timing-function: ease;
  }
}


<input
  data-testid="color-picker"
  id="color-picker"
  type="color"
  class="a ab ac ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b ba bb bc bd be bf bg bh bi bj bk c d e f g h i j k l m n o p q r s t u v w x y z form-control-color"
  title="Pick Color"
  value="#000"
/>;
"
`;

exports[`components/Form/Controls/ColorPicker should render a color picker with title 2`] = `
".a {
  cursor: pointer;
}
.b {
  display: block;
}
.c {
  font-size: 1rem;
}
.d {
  font-weight: 400;
}
.e {
  line-height: 1.5;
}
.f {
  color: #212529;
}
.g {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
}
.h {
  -webkit-background-color: #fff;
  background-color: #fff;
}
.i {
  background-clip: padding-box;
}
.j {
  width: 3rem;
}
.k {
  height: calc(1.5em + 0.75rem + 2px);
}
.x::color-swatch {
  border-top-left-radius: 0.375rem;
}
.y::color-swatch {
  border-top-right-radius: 0.375rem;
}
.z::color-swatch {
  border-bottom-right-radius: 0.375rem;
}
.ab::color-swatch {
  border-bottom-left-radius: 0.375rem;
}
.ac::color-swatch {
  border-top-width: 0;
}
.ae::color-swatch {
  border-right-width: 0;
}
.af::color-swatch {
  border-bottom-width: 0;
}
.ag::color-swatch {
  border-left-width: 0;
}
.ah::color-swatch {
  border-top-color: !important;
}
.ai::color-swatch {
  border-right-color: !important;
}
.aj::color-swatch {
  border-bottom-color: !important;
}
.ak::color-swatch {
  border-left-color: !important;
}
.al:disabled {
  cursor: default;
}
.am:readonly {
  cursor: default;
}
.an {
  padding-top: 0.375rem;
}
.ao {
  padding-right: 0.375rem;
}
.ap {
  padding-bottom: 0.375rem;
}
.aq {
  padding-left: 0.375rem;
}
.ar {
  transition-property: border-color, box-shadow;
}
.as {
  transition-duration: 0.15s, 0.15s;
}
.at {
  transition-delay: ease-in-out, ease-in-out;
}
.au {
  transition-timing-function: ease, ease;
}
.av {
  border-top-left-radius: 0.375rem;
}
.aw {
  border-top-right-radius: 0.375rem;
}
.ax {
  border-bottom-right-radius: 0.375rem;
}
.ay {
  border-bottom-left-radius: 0.375rem;
}
.az {
  border-top-width: 1px;
}
.ba {
  border-right-width: 1px;
}
.bb {
  border-bottom-width: 1px;
}
.bc {
  border-left-width: 1px;
}
.bd {
  border-top-style: solid;
}
.be {
  border-right-style: solid;
}
.bf {
  border-bottom-style: solid;
}
.bg {
  border-left-style: solid;
}
.bh {
  border-top-color: #dee2e6;
}
.bi {
  border-right-color: #dee2e6;
}
.bj {
  border-bottom-color: #dee2e6;
}
.bk {
  border-left-color: #dee2e6;
}
.p:focus {
  color: #212529;
}
.q:focus {
  -webkit-background-color: #fff;
  background-color: #fff;
}
.r:focus {
  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
}
.s:focus {
  outline-width: 0;
}
.t:focus {
  border-top-color: #86b7fe;
}
.u:focus {
  border-right-color: #86b7fe;
}
.v:focus {
  border-bottom-color: #86b7fe;
}
.w:focus {
  border-left-color: #86b7fe;
}
@media (prefers-reduced-motion: reduce) {
  .l {
    transition-property: none;
  }
  .m {
    transition-duration: 0s;
  }
  .n {
    transition-delay: 0s;
  }
  .o {
    transition-timing-function: ease;
  }
}


<input
  data-testid="color-picker"
  id="color-picker"
  type="color"
  class="a ab ac ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b ba bb bc bd be bf bg bh bi bj bk c d e f g h i j k l m n o p q r s t u v w x y z form-control-color"
  title="Pick Color"
  value="#000"
/>;
"
`;

exports[`components/Form/Controls/ColorPicker should render a color picker with title 3`] = `
".a {
  cursor: pointer;
}
.b {
  display: block;
}
.c {
  font-size: 1rem;
}
.d {
  font-weight: 400;
}
.e {
  line-height: 1.5;
}
.f {
  color: #212529;
}
.g {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
}
.h {
  -webkit-background-color: #fff;
  background-color: #fff;
}
.i {
  background-clip: padding-box;
}
.j {
  width: 3rem;
}
.k {
  height: calc(1.5em + 1rem + 2px);
}
.x::color-swatch {
  border-top-left-radius: 0.375rem;
}
.y::color-swatch {
  border-top-right-radius: 0.375rem;
}
.z::color-swatch {
  border-bottom-right-radius: 0.375rem;
}
.ab::color-swatch {
  border-bottom-left-radius: 0.375rem;
}
.ac::color-swatch {
  border-top-width: 0;
}
.ae::color-swatch {
  border-right-width: 0;
}
.af::color-swatch {
  border-bottom-width: 0;
}
.ag::color-swatch {
  border-left-width: 0;
}
.ah::color-swatch {
  border-top-color: !important;
}
.ai::color-swatch {
  border-right-color: !important;
}
.aj::color-swatch {
  border-bottom-color: !important;
}
.ak::color-swatch {
  border-left-color: !important;
}
.al:disabled {
  cursor: default;
}
.am:readonly {
  cursor: default;
}
.an {
  padding-top: 0.375rem;
}
.ao {
  padding-right: 0.375rem;
}
.ap {
  padding-bottom: 0.375rem;
}
.aq {
  padding-left: 0.375rem;
}
.ar {
  transition-property: border-color, box-shadow;
}
.as {
  transition-duration: 0.15s, 0.15s;
}
.at {
  transition-delay: ease-in-out, ease-in-out;
}
.au {
  transition-timing-function: ease, ease;
}
.av {
  border-top-left-radius: 0.375rem;
}
.aw {
  border-top-right-radius: 0.375rem;
}
.ax {
  border-bottom-right-radius: 0.375rem;
}
.ay {
  border-bottom-left-radius: 0.375rem;
}
.az {
  border-top-width: 1px;
}
.ba {
  border-right-width: 1px;
}
.bb {
  border-bottom-width: 1px;
}
.bc {
  border-left-width: 1px;
}
.bd {
  border-top-style: solid;
}
.be {
  border-right-style: solid;
}
.bf {
  border-bottom-style: solid;
}
.bg {
  border-left-style: solid;
}
.bh {
  border-top-color: #dee2e6;
}
.bi {
  border-right-color: #dee2e6;
}
.bj {
  border-bottom-color: #dee2e6;
}
.bk {
  border-left-color: #dee2e6;
}
.p:focus {
  color: #212529;
}
.q:focus {
  -webkit-background-color: #fff;
  background-color: #fff;
}
.r:focus {
  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
}
.s:focus {
  outline-width: 0;
}
.t:focus {
  border-top-color: #86b7fe;
}
.u:focus {
  border-right-color: #86b7fe;
}
.v:focus {
  border-bottom-color: #86b7fe;
}
.w:focus {
  border-left-color: #86b7fe;
}
@media (prefers-reduced-motion: reduce) {
  .l {
    transition-property: none;
  }
  .m {
    transition-duration: 0s;
  }
  .n {
    transition-delay: 0s;
  }
  .o {
    transition-timing-function: ease;
  }
}


<input
  data-testid="color-picker"
  id="color-picker"
  type="color"
  class="a ab ac ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b ba bb bc bd be bf bg bh bi bj bk c d e f g h i j k l m n o p q r s t u v w x y z form-control-color"
  title="Pick Color"
  value="#000"
/>;
"
`;
